--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1946,8 +1946,8 @@ section {
   margin-bottom: 16px;
 }
 .slide-1 {
-  background: url("../../assets/img/slide/banner-1.jpeg") no-repeat 100% 0%;
-  background-size: cover !important;
+  background: url("../../assets/img/portfolio/BasavanaBagilu.jpg") no-repeat;
+  background-size: cover;
 }
 .slide-2 {
   background: url("../../assets/img/portfolio/Gaddige2.jpg") no-repeat center
